--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col bg-black text-white">
-                <div class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</div>
+                <div class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</div>
             </div>
         </div>
     </header>
