--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -54,7 +54,7 @@
                             <p class="my-0">${{ item.product.price }}</p>
                         </td>
                         <td class="py-3 w-25">
-                            <form class="form update-form" action="" method="POST">
+                            <form class="form update-form" action="{% url 'adjust_bag' item.item_id %}" method="POST">
                                 {% csrf_token %}
 
                                 <div class="form-group">
@@ -85,10 +85,9 @@
                                 </div>
                             </form>
 
-                            <a href="" class="update-link text-info"><small>Update</small></a>
-                            <a href="" class="remove-link text-danger float-right" id="remove_{{ item.item_id }}"
-                                data-size="{{ item.size }}"><small>Remove</small></a>
-
+                            <a class="update-link text-info"><small>Update</small></a>
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"
+                                data-product_size="{{ item.size }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3">
                             <p class="my-0">${{ item.product.price }}</p>
@@ -155,11 +154,11 @@
     $('.remove-item').click(function (e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
+        var size = $(this).data('product_size');
+        var url = `/bag/remove/${itemId}/`;
         var data = {
             'csrfmiddlewaretoken': csrfToken,
-            'size': size
+            'product_size': size
         };
         $.post(url, data).done(function () {
             location.reload();
