--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -55,9 +55,7 @@
                         <tr>
                             <td>
                                 <a href="{% url 'order_history' order.order_number%}" title={{ order.order_number }}>
-                                    {{ 
-                                        order.order_number|truncatechars:6 
-                                    }}
+                                    {{order.order_number|truncatechars:6}}
                                 </a>
                             </td>
                             <td>{{ order.order_date }}</td>
