--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -28,7 +28,13 @@
             <form class="form mb-2" method="POST" action="{% url 'edit_product' product.id %}"
                 enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form|crispy }}
+                {% for field in form %}
+                {% if field.name != 'image' %}
+                {{ field|as_crispy_field}}
+                {% else %}
+                {{ field }}
+                {% endif %}
+                {% endfor %}
                 <div class="text-right">
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Update Product</button>
@@ -38,4 +44,14 @@
     </div>
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+{{block.super}}
+<script type="text/javascript">
+    $('#new-image').change(function () {
+        var file = $('#new-image')[0].files[0];
+        $('#filename').text(`Image will be set to: ${file.name}`);
+    })
+</script>
 {% endblock %}
